force-app/main/default/objects/LLC_BI__Authorized_Account__c/fields/LLC_BI__Allocation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Allocation_Percentage__c</fullName>
    <description>The user populates this percent field with the Tax Favored Account percentage for the beneficiary.</description>
    <inlineHelpText>Enter the Tax Favored Account percentage.</inlineHelpText>
    <label>Beneficiary Allocation Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>