force-app/main/default/objects/LLC_BI__Authorized_Account__c/fields/LLC_BI__Authorized_Account__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Authorized_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this optional lookup field to capture the authorized business for which the current authorized business is acting.</description>
    <inlineHelpText>The system-populated field associates the authorized business to another authorized business.</inlineHelpText>
    <label>Authorized Account</label>
    <referenceTo>LLC_BI__Authorized_Account__c</referenceTo>
    <relationshipLabel>Authorized Accounts</relationshipLabel>
    <relationshipName>Authorized_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>