force-app/main/default/objects/LLC_BI__Authorized_Account__c/fields/LLC_BI__Beneficiary_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Beneficiary_Type__c</fullName>
    <description>The user populates this picklist to indicate the type of the beneficiary</description>
    <inlineHelpText>Select the Beneficiary Type.</inlineHelpText>
    <label>Beneficiary Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
                <default>true</default>
                <label>Primary</label>
            </value>
            <value>
                <fullName>Contingent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>