force-app/main/default/objects/LLC_BI__Authorized_Account__c/fields/LLC_BI__Capacity__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Capacity__c</fullName>
    <description>The user populates this required picklist to specify what capacity the business can act on behalf of the relationship.</description>
    <label>Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Beneficiary</fullName>
            </value>
            <value>
                <fullName>General Partner</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Trustee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>