force-app/main/default/objects/LLC_BI__Authorized_Account__c/fields/LLC_BI__Entity__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Entity__c</fullName>
    <description>The system automatically populates this required lookup field to associate an authorized business to a specific entity involvement.</description>
    <inlineHelpText>The system-populated field associates the authorized business to a specific entity involvement.</inlineHelpText>
    <label>Entity Involvement</label>
    <referenceTo>LLC_BI__Legal_Entities__c</referenceTo>
    <relationshipLabel>Authorized Accounts</relationshipLabel>
    <relationshipName>Authorized_Accounts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>