force-app/main/default/objects/LLC_BI__Authorized_Account__c/fields/LLC_BI__Ownership_Structure_Role__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Ownership_Structure_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this lookup field during the deposit account opening workflow to associate an authorized business to a specific ownership structure role.</description>
    <inlineHelpText>This system-populated field associates the authorized business to a specific ownership structure role.</inlineHelpText>
    <label>Ownership Structure Role</label>
    <referenceTo>LLC_BI__Ownership_Structure_Role__c</referenceTo>
    <relationshipLabel>Authorized Accounts</relationshipLabel>
    <relationshipName>Authorized_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>