force-app/main/default/objects/LLC_BI__Authorized_Account__c/fields/LLC_BI__Signing_Authority__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Signing_Authority__c</fullName>
    <description>The user populates this required picklist to indicate the signing authority the business has for the loan.</description>
    <label>Signing Authority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Authorized</fullName>
            </value>
            <value>
                <fullName>Not Authorized</fullName>
                <default>true</default>
                <label>Not Authorized</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>